# pyChaining

./: .gitignore  README.md  main.py  pyproject.toml
src/pyChaining/: PyChaining.py  __init__.py
test/: test.py
