[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "pyChaining"
version = "0.0.2"
authors = [
  { name="xethhung", email="pypi@xethh.dev" },
]
description = "java stream style(high order, map reduce and method chaining) library for simplify the multiple map and filter operations"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/xh-dev/pyChaining"
"Bug Tracker" = "https://github.com/xh-dev/pyChaining/issues"